minha primeira modificação no projeto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="titulo">
     <h1>Meu próprio teste</h1>
+
+    <h2 class="titulo2">Estou fazendo esta alteração de propósito</h2>
     </div>
 </body>
 </html>
